discussion/kv_engine/177002/177002_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create misc test suite in serverless tests

Change-Id: Icf84a5dcae7c8b7ecc00ff05bbdd68e57c672071

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 06:16:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 07:23:53.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47281/ : FAILURE

Failure of GoogleTest "AllBucketTypes/ActiveDurabilityMonitorTest.SeqnoAckReceived_PersistToSecondChainNewActive/persistent_nexus_couchstore_magma_full_eviction":

<pre>
[ RUN      ] AllBucketTypes/ActiveDurabilityMonitorTest.SeqnoAckReceived_PersistToSecondChainNewActive/persistent_nexus_couchstore_magma_full_eviction
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.181601" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/ActiveDurabilityMonitorTest.SeqnoAckReceived_PersistToSecondChainNewActive/persistent_nexus_couchstore_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=full_eviction" (3 ms)
AllBucketTypes/ActiveDurabilityMonitorTest.SeqnoAckReceived_PersistToSecondChainNewActive/persistent_nexus_couchstore_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18516/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:25:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:54:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:56:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->createBucket("TestDefaultThrottleLimit",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:69:5: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    cluster->deleteBucket("TestDefaultThrottleLimit");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:76:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:93:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:115:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:133:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:173:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18516/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:25:18:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8187/ : FAILURE

Compile error at [2022-07-03T06:31:56.194Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8187/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20400/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20400/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19622/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [76/160]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4372 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2022-07-03T06:35:29.002Z] (228 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19622/ )

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
[2022-07-03T06:33:57.689Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1331: Failure
[2022-07-03T06:33:57.689Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-07-03T06:33:57.689Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (8101 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17665/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39728/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20748/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8286/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
